# visdata

./: LICENSE  README.md  pyproject.toml
examples/: available_tools.py  compare_results.py  geometric_figures.py  histogram2d.py  intervals.py  output.py  profile2d.py
src/visdata/: __init__.py  decorators.py
src/visdata/binned_data/: __init__.py  histogram2d.py  profile2d.py
src/visdata/mathtools/: __init__.py
src/visdata/output/: __init__.py  general.py  table.py
src/visdata/plotting/: __init__.py  compare_results.py  geometric_figures.py  matplotlib_util.py
