[project]
name = "visdata"
version = "0.1.1"
authors = [
  { name="Philipp Meder", email="148459685+PhilippMeder@users.noreply.github.com" },
]
description = "Package for data visualisation."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
  "numpy>2",
  "matplotlib>3.8"
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/philippmeder/visdata"
Issues = "https://github.com/philippmeder/visdata/issues"